--- a/03-packages/package-development.html
+++ b/03-packages/package-development.html
@@ -35,17 +35,44 @@ In the R world, versions of this are attributed to Hadley Wickham:
 
 --
 
-Also known as the [rule of three](https://en.wikipedia.org/wiki/Rule_of_three_(computer_programming):
-
- - popularized by Martin Fowler (1999), attributed to Don Roberts
+Also known as the [rule of three](https://en.wikipedia.org/wiki/Rule_of_three_(computer_programming): popularized by Martin Fowler (1999), attributed to Don Roberts
  
 --
 
-Packages are the means for sharing code:
+A way to keep stuff together:
+
+ - documentation
+ - functions
+ - tests
+ - data
+
+--
+
+Also the means for sharing stuff:
 
   - CRAN
-
   - GitHub
+
+
+---
+
+## Assumptions
+
+You have gone through the day-zero prep:
+
+- installed packages **devtools** and **usethis** (CRAN)
+
+- git installed and configured
+
+- GitHub account, `GITHUB_PAT` set in `.Renviron`
+  
+- functionality of the [starter `.Rprofile`](https://gist.github.com/ijlyttle/dee4a89c8528cd4a0a319bb7b8cdd51a)
+  
+--
+
+----
+
+🙀 `install.packages(c("pkgdown", "forcats"))`
 
 ---
 
@@ -60,6 +87,12 @@ Packages are the means for sharing code:
 - [Packages](https://github.com/hfrick/presentations/blob/master/2019-03-12_package_building/2019-03-12_package_building.pdf), Hannah Frick
   
 - [goodPractice](https://github.com/hfrick/presentations/blob/master/2018-06-27_goodpractice/2018-06-27_goodpractice.pdf), Hannah Frick
+
+- [You can make a package in 20 minutes](https://www.rstudio.com/resources/videos/you-can-make-a-package-in-20-minutes/), Jim Hester
+
+----
+
+🙀 `install.packages(c("pkgdown", "forcats"))`
 
 ---
 
@@ -122,13 +155,15 @@ create_package("../foofactors") # set the path to suit you
 
 **Next**, open `DESCRIPTION` file to edit it:
 
-- `Authors@R` field populated using `options("usethis.description")`
+- `Authors@R` field uses `options("usethis.description")` 
 
-- Add `Title` field
+   - set this in `.Rprofile`
 
-- Add `Description` field
+- add `Title` field
 
-- Save `DESCRIPTION` file
+- add `Description` field
+
+- save `DESCRIPTION` file
 
 ]
 
@@ -222,6 +257,8 @@ use_mit_license()
 
 - uses `option("usethis.full_name")` or `option("devtools.name")` 
 
+  - set this in `.Rprofile`
+
 ]
 
 
@@ -250,7 +287,7 @@ document()
 load_all()
 check()
 ```
-- commit, pull, push
+🚀 commit, pull, push
 
 ]
 
@@ -280,23 +317,56 @@ check()
 use_r("fbind")
 ```
 
-I like the idea of "document-driven" development:
+I like the idea of documenting, then writing **functions**:
 
- - claim what the function will do, then do it
+- claim what the function will do, then do it
 
- - if your explanation is getting heavy, split into more functions
+- if your explanation is getting heavy, split into more functions
+
+Start by writing a shell for the function:
+
+```r
+fbind &lt;- function(a, b) {
   
+}
+```
+
+- place the cursor on the blank line between the `{` 📝 `}` 
+
+- RStudio IDE menu: **Code** &gt; **Insert Roxygen Skeleton**
+
+]
+
+.teach-right[ 
+&lt;img src="workspace/img-nouns/develop.png" width="824" style="display: block; margin: auto 0 auto auto;" /&gt;
+]
+
+
+---
+
+## Develop (your turn)
+
+.teach-left[
+
+Complete the documentation:
+
 ```r
 #' Concatenate factors, including levels
 #'
+#' Concatenates two factors with two differerent sets of levels, returning
+#' a factor with levels that are the union of the input factors' levels.
+#
 #' @param a `factor`
 #' @param b `factor`
 #'
 #' @return `factor`, concatenation of `a` and `b`
-#' 
 #' @export
 #'
+#' @examples
+#' fbind(iris$Species, Puromycin$state)
+#'
 fbind &lt;- function(a, b) {
+
 }
 ```
 ]
@@ -311,6 +381,8 @@ fbind &lt;- function(a, b) {
 
 .teach-left[
 
+Write the function body:
+
 ```r
 #' Concatenate factors, including levels
 #'
@@ -321,9 +393,10 @@ fbind &lt;- function(a, b) {
 #' @param b `factor`
 #'
 #' @return `factor`, concatenation of `a` and `b`
-#' @examples
-#'   fbind(iris$Species, Puromycin$state)
 #' @export
+#'
+#' @examples
+#' fbind(iris$Species, Puromycin$state)
 #'
 fbind &lt;- function(a, b) {
   forcats::fct_c(a, b)
@@ -361,7 +434,7 @@ load_all()
 check()
 ```
 
-What happened?
+🤔 What happened?
 
 ]
 
@@ -396,7 +469,7 @@ load_all()
 check()
 ```
 
-- commit, pull, push
+🚀 commit, pull, push
 
 ]
 
@@ -491,7 +564,7 @@ load_all()
 check()
 ```
 
-- commit, pull, push
+🚀 commit, pull, push
 
 ]
 
@@ -544,7 +617,7 @@ load_all()
 check()
 ```
 
-- commit, pull, push
+🚀 commit, pull, push
 
 ]
 
@@ -582,7 +655,7 @@ template:
 build_site()
 ```
 
-- commit, pull, push
+🚀 commit, pull, push
 
 ]
 
@@ -633,27 +706,25 @@ There's a lot more information at the [pkgdown web-site](https://pkgdown.r-lib.o
 ---
 
 
-### Random stuff (in case we have time)
+## Random stuff (in case we have time)
 
-- How to I do "x"?
+🤔 How to I do "x"?
 
-  - [RStudio community](https://community.rstudio.com/) is very welcoming.
   - What does [Tidyverse](https://github.com/tidyverse) do? 
     - Just look through the code.
+  - [RStudio community](https://community.rstudio.com/) is very welcoming.
 
-- Guides:
+📖 Guides:
 
   - [Tidyverse style guide](https://style.tidyverse.org/)
-  
   - [ROpenSci development guide](https://ropensci.github.io/dev_guide/)
 
-- Philosophy:
+🤓 Philosophy:
 
  - [Tidyverse principles](https://principles.tidyverse.org)
- 
  - Ian's [favorite issue](https://github.com/r-lib/httr2/issues/1)
  
-- Roxygen life-savers
+🙌 Roxygen life-savers
 
   - `@inheritParams my_fun`
   - `@inherit my_fun return`
