--- a/03-packages/package-development.html
+++ b/03-packages/package-development.html
@@ -58,7 +58,7 @@ Also the means for sharing stuff:
 ## Caveat and Assumptions
 
 
-This will cover what you need to get **started** creating packages, 
+We will go through what you need to get **started** creating packages. 
 
 --
 
@@ -679,7 +679,7 @@ To deploy your website using GitHub pages:
 
 - go to the web-page for your GitHub repository
 
-- ⚙️ **Settings** &gt; **GitHub Pages** &gt; **Source**:
+- ⚙️ **Settings** &gt; **GitHub Pages** &gt; **Source**
 
 - set to **master branch /docs folder** 
 
@@ -728,7 +728,7 @@ There's a lot more information at the [pkgdown web-site](https://pkgdown.r-lib.o
  - [Tidyverse principles](https://principles.tidyverse.org)
  - Ian's [favorite issue](https://github.com/r-lib/httr2/issues/1)
  
-🙌 Roxygen life-savers
+🙌 Roxygen life-savers:
 
   - `@inheritParams my_fun`
   - `@inherit my_fun return`
