Add testthat to packages we need to install

--- a/03-packages/package-development.html
+++ b/03-packages/package-development.html
@@ -76,7 +76,7 @@ You have gone through the day-zero prep:
 
 ----
 
-🙀 `install.packages(c("pkgdown", "forcats"))`
+🙀 `install.packages(c("testthat", "pkgdown", "forcats"))`
 
 ---
 
@@ -96,7 +96,7 @@ You have gone through the day-zero prep:
 
 ----
 
-🙀 `install.packages(c("pkgdown", "forcats"))`
+🙀 `install.packages(c("testthat", "pkgdown", "forcats"))`
 
 ---
 
