--- a/01-git-github-cornucopia/git-github-cornucopia.html
+++ b/01-git-github-cornucopia/git-github-cornucopia.html
@@ -3,6 +3,7 @@
   <head>
     <title>Uncoast Unconf Day-Zero Workshop</title>
     <meta charset="utf-8" />
+    <meta name="author" content="Amelia McNamara (AmeliaMN)" />
     <meta name="date" content="2019-04-14" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/default-fonts.css" rel="stylesheet" />
@@ -14,6 +15,7 @@ class: center, middle, inverse, title-slide
 
 # Uncoast Unconf Day-Zero Workshop
 ## git and Github cornucopia
+### Amelia McNamara (<a href="https://twitter.com/AmeliaMN">AmeliaMN</a>)
 ### 2019-04-14
 
 ---
