slide on issues

--- a/01-git-github-cornucopia/git-github-cornucopia.html
+++ b/01-git-github-cornucopia/git-github-cornucopia.html
@@ -393,6 +393,10 @@ For example, [fct_lump() does not respect asking for most common n - 1 values #1
 
 &lt;img src="img/forcats-issue.png" width='80%' class='centered'&gt;
 
+---
+
+## Filing effective issues
+
 To [file an issue](https://www.tidyverse.org/contribute/#issues), you usually need to start with a [reprex](https://www.tidyverse.org/help/#reprex).
 
 ---
