--- a/04-html-css-js/test.html
+++ b/04-html-css-js/test.html
@@ -1,3 +1,13 @@
-hi there!
-
-let's see how the auto-updating works
+<html>
+  <head>
+    <title>The title of your document</title>
+  </head>
+  <body>
+    <p>This is a paragraph</p>
+    <ul>
+      <li>A bullet</li>
+      <li>Another bullet</li>
+    </ul>
+  </body>
+  
+</html>
