--- a/04-html-css-js/Amelias-notes.html
+++ b/04-html-css-js/Amelias-notes.html
@@ -209,6 +209,11 @@ $(document).ready(function () {
 <h2>Another magic thing</h2>
 <p>You can also right-click on an element and select “Inspect” to see how any element on a page has been generated.</p>
 </div>
+<div id="styling" class="section level2">
+<h2>Styling</h2>
+<p>You can style globally, using css. This doesn’t need to be in a separate file, it can just be between <code>&lt;style&gt;</code> tags in the <code>&lt;head&gt;</code> of your document. For example, we added the styling for <code>p</code>, which works globally.</p>
+<p>Another way to style things is with classes.</p>
+</div>
 
 
 
