--- a/04-html-css-js/test.html
+++ b/04-html-css-js/test.html
@@ -1,13 +1,22 @@
 <html>
   <head>
     <title>The title of your document</title>
+    <style>
+      p {
+        font-size: 40px;
+      }
+      .red {
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <p>This is a paragraph</p>
+    <p class="red">This is a paragraph</p>
     <ul>
       <li>A bullet</li>
       <li>Another bullet</li>
     </ul>
+    <p>Another paragraph</p>
   </body>
   
 </html>
