--- a/04-html-css-js/test.html
+++ b/04-html-css-js/test.html
@@ -8,15 +8,28 @@
       .red {
         color: red;
       }
+      #foo {
+        font-size: 10px;
+      }
+      div > p {
+        
+      }
     </style>
   </head>
   <body>
+    <div>
+      <p>A paragraph within a div. 
+      </p>
+      <blockquote>
+        This is awesome!
+      </blockquote>
+    </div>
     <p class="red">This is a paragraph</p>
     <ul>
       <li>A bullet</li>
       <li>Another bullet</li>
     </ul>
-    <p>Another paragraph</p>
+    <p id="foo">Another paragraph</p>
   </body>
   
 </html>
