--- a/04-html-css-js/Amelias-notes.html
+++ b/04-html-css-js/Amelias-notes.html
@@ -212,7 +212,8 @@ $(document).ready(function () {
 <div id="styling" class="section level2">
 <h2>Styling</h2>
 <p>You can style globally, using css. This doesn’t need to be in a separate file, it can just be between <code>&lt;style&gt;</code> tags in the <code>&lt;head&gt;</code> of your document. For example, we added the styling for <code>p</code>, which works globally.</p>
-<p>Another way to style things is with classes.</p>
+<p>Another way to style things is with classes. If you have something set for a tag and something for a class, you get both.</p>
+<p>But, you can also override styles with other styles. For example, the id rule will override the rule on p. css has a heirarchical structure. You can define rules based on the order of elements on the page. <code>div &gt; p</code> means a paragraph that is a direct child of div. With a space, it can be any descendent in the tree. <code>div p</code> could mean a paragraph that is a child, grandchild, etc. of the div</p>
 </div>
 
 
