live edit javascript

--- a/04-html-css-js/test.html
+++ b/04-html-css-js/test.html
@@ -1,20 +1,7 @@
 <html>
   <head>
     <title>The title of your document</title>
-    <style>
-      p {
-        font-size: 40px;
-      }
-      .red {
-        color: red;
-      }
-      #foo {
-        font-size: 10px;
-      }
-      div > p {
-        
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div>
