fonts and stylesheets

--- a/04-html-css-js/Amelias-notes.html
+++ b/04-html-css-js/Amelias-notes.html
@@ -267,6 +267,7 @@ $(document).ready(function () {
 <p>If you want to use one, put</p>
 <pre><code>css: [&quot;chocolate&quot;]</code></pre>
 <p>into your xaringan header.</p>
+<p>If you dig into those files, you’ll see that fonts are specified separately. For example, look at the <a href="https://github.com/yihui/xaringan/blob/master/inst/rmarkdown/templates/xaringan/resources/chocolate-fonts.css">fonts for chocolate</a></p>
 </div>
 
 
