--- a/04-html-css-js/Amelias-notes.html
+++ b/04-html-css-js/Amelias-notes.html
@@ -267,7 +267,8 @@ $(document).ready(function () {
 <p>If you want to use one, put</p>
 <pre><code>css: [&quot;chocolate&quot;]</code></pre>
 <p>into your xaringan header.</p>
-<p>If you dig into those files, you’ll see that fonts are specified separately. For example, look at the <a href="https://github.com/yihui/xaringan/blob/master/inst/rmarkdown/templates/xaringan/resources/chocolate-fonts.css">fonts for chocolate</a></p>
+<p>If you dig into those files, you’ll see that fonts are specified separately. For example, look at the <a href="https://github.com/yihui/xaringan/blob/master/inst/rmarkdown/templates/xaringan/resources/chocolate-fonts.css">fonts for chocolate</a>.</p>
+<p>When you don’t want to use the fonts of the theme, you can choose not to use the <code>*-fonts.css</code> file. If the theme contained the fonts declaration, you’re wasting bandwith to import fonts without using them.</p>
 </div>
 
 
